--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,34 @@
-<p>home works!</p>
+
+
+<div class="row p-5">
+    <select class="form-select" aria-label="Default select example">
+        <option selected>Open this select menu</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+</div>
+<div class="row p-2">
+    <div class="col-6">
+        <app-news></app-news>
+    </div>
+    <div class="col-6">
+        <app-news></app-news>
+    </div>
+    <div class="col-6">
+        <app-news></app-news>
+    </div>
+    <div class="col-6">
+        <app-news></app-news>
+    </div>
+    <div class="col-6">
+        <app-news></app-news>
+    </div>
+    <div class="col-6">
+        <app-news></app-news>
+    </div>
+    <div class="col-6">
+        <app-news></app-news>
+    </div>
+</div>
+
