--- a/src/app/share/menu/menu.component.html
+++ b/src/app/share/menu/menu.component.html
@@ -1,5 +1,4 @@
-<div class="btn-group" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-secondary">Left</button>
-    <button type="button" class="btn btn-secondary">Middle</button>
-    <button type="button" class="btn btn-secondary">Right</button>
+<div class="btn-group p-5 text-center" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-outline-primary">All</button>
+    <button type="button" class="btn btn-outline-primary">My Faves</button>
 </div>
