get services news by tecnology, consume services page home and improve child news

--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,1 +1,17 @@
-<p>favorites works!</p>
+
+    
+<div class="row p-2" *ngIf="searchByTecnologyService.newsByTecnologyLocalStorage.length > 0">
+    <div class="col-6" *ngFor="let news of searchByTecnologyService.newsByTecnologyLocalStorage">
+        <app-news 
+            [author]="news.author" 
+            [story_title]="news.story_title" 
+            [story_url]="news.story_url" 
+            [created_at]="news.created_at">
+        </app-news>
+    </div>
+</div>
+
+<div class="row content-no-favorites" *ngIf="searchByTecnologyService.newsByTecnologyLocalStorage.length === 0">
+    <h4>NO FAVORITES</h4>
+</div>
+
