--- a/src/app/share/menu/menu.component.html
+++ b/src/app/share/menu/menu.component.html
@@ -1,4 +1,4 @@
 <div class="btn-group p-5 text-center" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-outline-primary">All</button>
-    <button type="button" class="btn btn-outline-primary">My Faves</button>
+    <button type="button" class="btn btn-outline-primary" (click)="routeAll()">All</button>
+    <button type="button" class="btn btn-outline-primary" (click)="routeFavorites()">My Faves</button>
 </div>
