--- a/src/app/share/news/news.component.css
+++ b/src/app/share/news/news.component.css
@@ -18,7 +18,7 @@
 .card-title {
     width: 100%;
     height: 20px;
-    margin: 6px 0 0;
+    margin-left: 10px;
     font-family: Roboto;
     font-size: 14px;
     font-weight: 500;
