localstorages favorites and choose tecnology, improves services

--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -6,7 +6,9 @@
             [author]="news.author" 
             [story_title]="news.story_title" 
             [story_url]="news.story_url" 
-            [created_at]="news.created_at">
+            [created_at]="news.created_at"
+            [story_id]="news.story_id"
+            [url]="news.url">
         </app-news>
     </div>
 </div>
