--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="row p-5 w-50">
     <select [(ngModel)]="opcionSeleccionado" (change)="getNewByTecnology(true)" class="form-select">
         <option value="0">Select your news</option>
@@ -9,44 +7,41 @@
     </select>
 </div>
 
-<div class="row p-2" >
+<div class="row p-2" *ngIf="!isLoading">
     <div class="col-6" *ngFor="let news of newsByTecnology">
-        <app-news 
-            [author]="news.author" 
-            [story_title]="news.story_title" 
-            [story_url]="news.story_url" 
-            [created_at]="news.created_at"
-            [story_id]="news.story_id"
-            [url]="news.url">
+        <app-news [author]="news.author" [story_title]="news.story_title" [story_url]="news.story_url" [created_at]="news.created_at" [story_id]="news.story_id" [url]="news.url">
         </app-news>
     </div>
 </div>
 
-<div class="row paginator">
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item" (click)="changeRemovePage(-1)">
-        <a class="page-link" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li class="page-item"><a class="page-link" (click)="changePage(0)">1</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(1)">2</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(2)">3</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(3)">3</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(4)">4</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(5)">6</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(6)">7</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(7)">8</a></li>
-      <li class="page-item"><a class="page-link" (click)="changePage(8)">9</a></li>
-      <li class="page-item" (click)="changeAddPage(1)">
-        <a class="page-link" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+
+<div class="row p-2" *ngIf="isLoading">
+    <h6>is loading ....</h6>
 </div>
 
 
-
+<div class="row paginator">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item" (click)="changeRemovePage(-1)">
+                <a class="page-link" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item"><a class="page-link" (click)="changePage(0)">1</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(1)">2</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(2)">3</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(3)">3</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(4)">4</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(5)">6</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(6)">7</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(7)">8</a></li>
+            <li class="page-item"><a class="page-link" (click)="changePage(8)">9</a></li>
+            <li class="page-item" (click)="changeAddPage(1)">
+                <a class="page-link" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
