--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,10 +1,12 @@
-<div class="row m-5" *ngIf="searchByTecnologyService.newsByTecnologyLocalStorage.length > 0">
+<!--Mostramos este div unicamente si existe mas de un elemento en nuestro localStorage de favoritos-->
+<div class="row m-4" *ngIf="searchByTecnologyService.newsByTecnologyLocalStorage.length > 0">
     <div class="col-6" *ngFor="let news of searchByTecnologyService.newsByTecnologyLocalStorage">
         <app-news [author]="news.author" [story_title]="news.story_title" [story_url]="news.story_url" [created_at]="news.created_at" [story_id]="news.story_id" [url]="news.url">
         </app-news>
     </div>
 </div>
 
+<!--Mostramos este div unicamente si no existe mas de un elemento en nuestro localStorage de favoritos-->
 <div class="row content-no-favorites" *ngIf="searchByTecnologyService.newsByTecnologyLocalStorage.length === 0">
     <h4>NO FAVORITES</h4>
 </div>
